deploy/arunlabs/forge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  labels:
    app.kubernetes.io/name: infisical
    app.kubernetes.io/part-of: infisical
    istio-injection: "disabled"
