deploy/arunlabs/forge/private-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: arunlabs-private-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-infisical
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: arunlabs-wildcard-tls
      hosts:
        - vault.arunlabs.com
